# django_toolkit

./: .gitignore  .gitleaksignore  API_TOKEN.md  AUTOREGISTER.md  CARD_SYSTEM.md  FEATURES.md  HTML_COMPONENTS.md  MANIFEST.in  QUICKSTART.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  setup.py
django_toolkit/: __init__.py  apps.py  cards.py  forms.py  postgres_history_trigger.sql  tables.py
django_toolkit/api/: authentication.py  filtersets.py  metadata.py  mixins.py  permissions.py  routers.py  serializers.py  swagger.py  views.py
django_toolkit/auto_creator/: __init__.py  admin_creator.py  api_nested_serializer_creator.py  api_serializer_creator.py  api_url_creator.py  api_view_creator.py  auto_creator.py  functions.py  menu_creator.py  request_based_queryset_creator.py  settings_creator.py  table_creator.py  url_creator.py  user_based_queryset_creator.py  view_creator.py
django_toolkit/decorators/: model_auto_creator.py
django_toolkit/functions/: api_filters.py  base.py  debug.py  django_setup.py  files.py  format.py  logging_handler.py  models.py  permissions.py  request.py
django_toolkit/html_components/: __init__.py  base.py  button.py  card.py  card_column.py  card_row.py  field.py  modal.py
django_toolkit/mixins/: __init__.py  admin.py  card_builder.py  dt_context.py  login_required.py  model_change_logging.py  table_pagination.py
django_toolkit/models/: __init__.py  api_token.py  base_models.py  group.py  init_db.py  request_based.py  user.py
django_toolkit/template_context/: __init__.py  base_component.py  button.py  card.py  card_row.py  (+5 more)
(+66 files in other folders)
