[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-toolkit"
version = "0.1.0"
description = "Wiederverwendbare Django-Komponenten"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Falko Böhme", email = "falko.boehme@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Django>=6.0",
    "django-tables2",
]

[project.urls]
Homepage = "https://github.com/yourusername/django-toolkit"
Repository = "https://github.com/yourusername/django-toolkit"
Bugtrack = "https://github.com/yourusername/django-toolkit"

[tool.setuptools.packages.find]
include = ["django_toolkit*"]
exclude = ["tests*", "docs*"]


[tool.black]
line-length = 140